--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th>
 <th><a id="a162" src="jpg/eragon_5.jpg" title="Эрагон. Вилка, ведьма и дракон (аудиокнига)"></a></th>
 <th><a id="a161" src="jpg/eragon_4.jpg" title="Эрагон. Наследие (аудиокнига)"></a></th>
 <th><img src="jpg/prestizh.jpg" title="Престиж"></th>
@@ -457,7 +458,7 @@
 <th colspan="2"><h4> </h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/208792">Аветисян Самвел</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/58">	  Адамс Дуглас</a></h4></th>
-<th colspan="3"><h4><a href="http://flibusta.is/a/245010">Адлер Алина</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<th colspan="3"><h4><a href="http://flibusta.is/a/245010">Адлер Алина</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  			   		<a href="http://flibusta.is/a/656">	  Азимов Айзек</a></h4></th>
 </tr><tr>
 <th><a id="a119" src="jpg/1001_noch.jpg" title="Тысяча и одна ночь. Сказки Шахерезады. Самая полная версия (аудиокнига)"></a></th> 
@@ -614,7 +615,7 @@
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="http://flibusta.is/a/34635">Боуден Оливер</a></h4></th>
 </tr><tr>
-<table><tr> <th><img src="jpg/assassins_0.jpg" title="Кодекс Альтаира"></th>
+<th><img src="jpg/assassins_0.jpg" title="Кодекс Альтаира"></th>
 <th><img src="jpg/assassins_1.jpg" title="Возрождение"></th>
 <th><img src="jpg/assassins_2.jpg" title="Братство"></th>
 <th><img src="jpg/assassins_3.jpg" title="Тайный крестовый поход"></th>
@@ -651,7 +652,7 @@
 <th colspan="3"><h4><a href="http://flibusta.is/a/17610"> Брэнсон Ричард</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/1762">  Буль Пьер</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/57345"> Вагин Игорь</a></h4></th> 
-<th colspan="3"><h4><a href="http://flibusta.is/a/138112">Вайцкин Джош</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<th colspan="3"><h4><a href="http://flibusta.is/a/138112">Вайцкин Джош</a> &nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="http://flibusta.is/a/144649">Вальдшмидт Дэн</a></h4></th>
 </tr><tr>
 <th><img src="jpg/beris_i_delai.jpg" title="К черту всё! Берись и делай!"></th>
@@ -769,28 +770,32 @@
 <th><img src="jpg/metro_2033.jpg" title="Метро 2033"></th>
 <th><a id="a55" src="jpg/metro_2034.jpg" title="Метро 2034 (аудиокнига)"></a></th>
 <th><a id="a58" src="jpg/metro_2035.jpg" title="Метро 2035 (аудиокнига)"></a></th>
-<th><a id="a59" src="jpg/metro_1.jpg" title="Путевые знаки (аудиокнига)"></a></th>
-<th><a id="a60" src="jpg/metro_2.jpg" title="Темные туннели (аудиокнига)"></a></th>
-<th><a id="a81" src="jpg/metro_9.jpg" title="В интересах революции (аудиокнига)"></a></th>
-<th><a id="a107" src="jpg/metro_22.jpg" title="Непогребенные (аудиокнига)"></a></th>
-<th><a id="a61" src="jpg/metro_106.jpg" title="Харам Бурум (аудиокнига)"></a></th>
-<th><a id="a63" src="jpg/metro_3.jpg" title="Питер (аудиокнига)"></a></th>
-<th><a id="a64" src="jpg/metro_4.jpg" title="К свету (аудиокнига)"></a></th> </tr> 
-<tr> <th><a id="a106" src="jpg/metro_16.jpg" title="Во мрак (аудиокнига)"></a></th>
-<th><a id="a66" src="jpg/metro_5.jpg" title="Выход силой (аудиокнига)"></a></th>
-<th><a id="a73" src="jpg/metro_6.jpg" title="Мраморный рай (аудиокнига)"></a></th>
-<th><a id="a75" src="jpg/metro_7.jpg" title="Странник (аудиокнига)"></a></th>
-<th><a id="a76" src="jpg/metro_8.jpg" title="Север (аудиокнига)"></a></th>
-<th><a id="a82" src="jpg/metro_10.jpg" title="Война кротов (аудиокнига)"></a></th>
-<th><a id="a84" src="jpg/metro_11.jpg" title="Муранча (аудиокнига)"></a></th>
-<th><a id="a89" src="jpg/metro_12.jpg" title="Безымянка (аудиокнига)"></a></th>
-<th><a id="a97" src="jpg/metro_13.jpg" title="Увидеть солнце (аудиокнига)"></a></th>
-<th><a id="a100" src="jpg/metro_14.jpg" title="Ниже ада (аудиокнига)"></a></th>
-<tr> <th><a id="a105" src="jpg/metro_15.jpg" title="Станция-призрак (аудиокнига)"></a></th>
-<th><a id="a108" src="jpg/metro_25.jpg" title="Царство крыс (аудиокнига)"></a></th>
-<th><img src="jpg/metro_26.jpg" title="Муос"></th>
+<th><a id="a59" src="jpg/metro_1.jpg" title="1. Путевые знаки (аудиокнига)"></a></th>
+<th><a id="a60" src="jpg/metro_2.jpg" title="2. Темные туннели (аудиокнига)"></a></th>
+<th><a id="a63" src="jpg/metro_3.jpg" title="3. Питер (аудиокнига)"></a></th>
+<th><a id="a64" src="jpg/metro_4.jpg" title="4. К свету (аудиокнига)"></a></th>
+<th><a id="a66" src="jpg/metro_5.jpg" title="5. Выход силой (аудиокнига)"></a></th>
+<th><a id="a73" src="jpg/metro_6.jpg" title="6. Мраморный рай (аудиокнига)"></a></th>
+<th><a id="a75" src="jpg/metro_7.jpg" title="7. Странник (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a76" src="jpg/metro_8.jpg" title="8. Север (аудиокнига)"></a></th>
+<th><a id="a81" src="jpg/metro_9.jpg" title="9. В интересах революции (аудиокнига)"></a></th>
+<th><a id="a82" src="jpg/metro_10.jpg" title="10. Война кротов (аудиокнига)"></a></th>
+<th><a id="a84" src="jpg/metro_11.jpg" title="11. Муранча (аудиокнига)"></a></th>
+<th><a id="a89" src="jpg/metro_12.jpg" title="12. Безымянка (аудиокнига)"></a></th>
+<th><a id="a97" src="jpg/metro_13.jpg" title="13. Увидеть солнце (аудиокнига)"></a></th>
+<th><a id="a100" src="jpg/metro_14.jpg" title="14. Ниже ада (аудиокнига)"></a></th>
+<th><a id="a105" src="jpg/metro_15.jpg" title="15. Станция-призрак (аудиокнига)"></a></th>
+<th><a id="a106" src="jpg/metro_16.jpg" title="16. Во мрак (аудиокнига)"></a></th>
+<th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th> </tr>
+
+<tr> <th><a id="a107" src="jpg/metro_22.jpg" title="22. Непогребенные (аудиокнига)"></a></th>
+
+<th><a id="a108" src="jpg/metro_25.jpg" title="25. Царство крыс (аудиокнига)"></a></th>
+<th><img src="jpg/metro_26.jpg" title="26. Муос"></th>
+
+<th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
-<th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th> 
+<th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
 </tr></table>
 
 
@@ -840,6 +845,7 @@
 <th colspan="2"><h4><a href="http://flibusta.is/a/26344">Грэм Бенджамин</a></h4></th>
 </tr><tr>	
 <th><a id="a67" src="jpg/r_investor.jpg" title="Разумный инвестор (аудиокнига)"></th>  
+<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
@@ -1933,7 +1939,7 @@
 <th colspan="3"><h4><a href="https://flibusta.is/a/11">	   Хокинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд</a></h4></th>
 <th colspan="5"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>&nbsp;
+					<a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>&nbsp;&nbsp;
 					<a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
@@ -2006,8 +2012,8 @@
 <th colspan="2"><h4><a href="https://flibusta.is/a/178835">Шевелева Ольга</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20317"> Шекспир Уильям</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/34088"> Шелли Мэри</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/16011"> Шефер Бодо</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/121029">Шмидт Эрик</a></h4></th>
+<th colspan="6"><h4><a href="https://flibusta.is/a/16011"> Шефер Бодо</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/121029">Шмидт Эрик</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/atlet_i_etiket.jpg" title="Атлет и этикет"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -2086,6 +2092,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
 <th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
+</tr></table>
 
 
 
