Прочитал Код лихорадки

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/labirint_02.jpg" title="Код лихорадки"></th>
+	<th><img src="data/12.2024.jpg"></th>
 <th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th>
 <th><a id="a162" src="jpg/eragon_5.jpg" title="Эрагон. Вилка, ведьма и дракон (аудиокнига)"></a></th>
 <th><a id="a161" src="jpg/eragon_4.jpg" title="Эрагон. Наследие (аудиокнига)"></a></th>
@@ -908,6 +910,7 @@
 <th colspan="10"><h4><a href="https://flibusta.is/a/65784">Дашнер Джеймс</a></h4></th>
 </tr><tr>
 <th><img src="jpg/labirint_01.jpg" title="Тотальная угроза"></th>
+<th><img src="jpg/labirint_02.jpg" title="Код лихорадки"></th>
 <th><img src="jpg/labirint_1.jpg" title="Бегущий в лаберинте"></th>
 <th><img src="jpg/labirint_2.jpg" title="Испытание огнем"></th>
 <th><img src="jpg/labirint_3.jpg" title="Лекарство от смерти"></th>
@@ -915,9 +918,9 @@
 <th><img src="jpg/koltso_beskonechnosti_2.jpg" title="Разделяй и властвуй"></th>
 <th><img src="jpg/koltso_beskonechnosti_3.jpg" title="Западня"></th>
 <th><img src="jpg/13_reality_1.jpg" title="Дневник загадочных писем"></th>
-<th><img src="jpg/smertonosnaia_igra_1.jpg" title="Смертоносная игра"></th>
-<th><img src="jpg/smertonosnaia_igra_2.jpg" title="Господство мысли"></th> </tr>
-<tr> <th><img src="jpg/smertonosnaia_igra_3.jpg" title="Игра жизни"></th> 
+<th><img src="jpg/smertonosnaia_igra_1.jpg" title="Смертоносная игра"></th> </tr>
+<tr> <th><img src="jpg/smertonosnaia_igra_2.jpg" title="Господство мысли"></th>
+<th><img src="jpg/smertonosnaia_igra_3.jpg" title="Игра жизни"></th> 
 </tr></table>
 
 
