--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a164" src="jpg/metro_18.jpg" title="18. Британия (аудиокнига)"></a></th>
 <th><img src="jpg/labirint_02.jpg" title="Код лихорадки"></th>
 	<th><img src="data/12.2024.jpg"></th>
 <th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th>
@@ -790,7 +791,9 @@
 <th><a id="a106" src="jpg/metro_16.jpg" title="16. Во мрак (аудиокнига)"></a></th>
 <th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th> </tr>
 
-<tr> <th><a id="a107" src="jpg/metro_22.jpg" title="22. Непогребенные (аудиокнига)"></a></th>
+<tr> <th><a id="a164" src="jpg/metro_18.jpg" title="18. Британия (аудиокнига)"></a></th>
+
+	<th><a id="a107" src="jpg/metro_22.jpg" title="22. Непогребенные (аудиокнига)"></a></th>
 
 <th><a id="a108" src="jpg/metro_25.jpg" title="25. Царство крыс (аудиокнига)"></a></th>
 <th><img src="jpg/metro_26.jpg" title="26. Муос"></th>
