--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><a id="a165" src="jpg/metro_19.jpg" title="19. Ледяной плен (аудиокнига)"></a></th>
 <th><a id="a164" src="jpg/metro_18.jpg" title="18. Британия (аудиокнига)"></a></th>
 <th><img src="jpg/labirint_02.jpg" title="Код лихорадки"></th>
@@ -1098,29 +1099,30 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/185005">Кавана Джон</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/252840">Карапинар Онур</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a></h4></th>
 </tr><tr>   
 <th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
+<th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="7"><h4><a href="https://flibusta.is/a/5535"> Карнеги Дейл и др.</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/33490">Карпишин Дрю</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
+<th colspan="7"><h4><a href="https://flibusta.is/a/5535">  Карнеги Дейл и др.</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/karnegi_1.jpg" title="Как приобретать друзей и оказывать влияние на людей"></th>
 <th><img src="jpg/karnegi_2.jpg" title="Как вырабатывать уверенность в себе и влиять на людей, выступая публично"></th> 
 <th><img src="jpg/karnegi_3.jpg" title="Как перестать беспокоиться и начать жить"></th>
@@ -1128,72 +1130,76 @@
 <th><a id="a6" src="jpg/karnegi_5.jpg" title="Язык успеха (аудиокнига)"></th>
 <th><img src="jpg/karnegi_01.jpg" title="Мосс Дуглас и Нарбут Алекс - Дейл Карнеги. Как стать мастером общения с любым человеком, в любой ситуации"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/mass_effect_1.jpg" title="Открытие"></th>
-<th><img src="jpg/mass_effect_2.jpg" title="Восхождение"></th>
-<th><img src="jpg/mass_effect_3.jpg" title="Возмездие"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="4"><h4><a href="https://flibusta.is/a/33490"> Карпишин Дрю</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/134116">Карри Мейсон</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/194157">Карсон Бен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/223543">Каст Бас</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/104829">Кауфман Джош</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/5699">  Кехо Джон</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/mass_effect_1.jpg" title="Открытие"></th>
+<th><img src="jpg/mass_effect_2.jpg" title="Восхождение"></th>
+<th><img src="jpg/mass_effect_3.jpg" title="Возмездие"></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/rezhim_genia.jpg" title="Режим гения. Распорядок дня великих людей"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/misli_shiroko.jpg" title="Мысли широко"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/mba.jpg" title="Сам себе MBA. Самообразование на 100%"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/podsoznaniye_mozhet_vse.jpg" title="Подсознание может всё!"></th>
-<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/5867">Киз Грегори</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/5866">Киз Дэниел</a></h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/5778">Кийосаки Роберт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/104829">Кауфман Джош</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/5699">  Кехо Джон</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/5867">  Киз Грегори</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/5866">  Киз Дэниел</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/mba.jpg" title="Сам себе MBA. Самообразование на 100%"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/podsoznaniye_mozhet_vse.jpg" title="Подсознание может всё!"></th>
+<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/TES.jpg" title="The Elder Scrolls. Адский город"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/billy_milligan.jpg" title="Таинственная история Билли Миллигана"></th>
 <th><img src="jpg/tsvety_dlya_eldzhernona.jpg" title="Цветы для Элджернона"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
-<th><img src="jpg/robert_kiyosaki_2.jpg" title="Как стать богатым, не отказываясь от кредитных карточек"></th>
-<th><img src="jpg/dar_midasa.jpg" title="Трамп Дональд, Кийосаки Роберт  - Дар Мидаса"></th> 
-<th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>									   Кинг Бернард</h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/5803">  Кинг Стивен</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/17765"> Киплинг Редьярд</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/5778">Кийосаки Роберт</a></h4></th>
+<th colspan="2"><h4>									 Кинг Бернард</h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/5803">Кинг Стивен</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
+<th><img src="jpg/robert_kiyosaki_2.jpg" title="Как стать богатым, не отказываясь от кредитных карточек"></th>
+<th><img src="jpg/dar_midasa.jpg" title="Трамп Дональд, Кийосаки Роберт  - Дар Мидаса"></th> 
+<th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/17765"> Киплинг Редьярд</a></h4></th>
 <th colspan="5"><h4><a href="https://flibusta.is/a/192136">Кирби Мэтью</a></h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/124636">Клайн Эрнест</a></h4></th>
-</tr><tr>  
+</tr><tr>  	
+<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/matthew_kirby_1.jpg" title="Последние потомки"></th>
 <th><img src="jpg/matthew_kirby_2.jpg" title="Гробница хана"></th>
 <th><img src="jpg/matthew_kirby_3.jpg" title="Участь богов"></th>
