Прочитал Осада рая

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a166" src="jpg/metro_20.jpg" title="20. Осада рая (аудиокнига)"></a></th>
 <th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><a id="a165" src="jpg/metro_19.jpg" title="19. Ледяной плен (аудиокнига)"></a></th>
 <th><a id="a164" src="jpg/metro_18.jpg" title="18. Британия (аудиокнига)"></a></th>
@@ -794,6 +795,7 @@
 <th><a id="a163" src="jpg/metro_17.jpg" title="17. Санитары (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a164" src="jpg/metro_18.jpg" title="18. Британия (аудиокнига)"></a></th>
 <th><a id="a165" src="jpg/metro_19.jpg" title="19. Ледяной плен (аудиокнига)"></a></th>
+<th><a id="a166" src="jpg/metro_20.jpg" title="20. Осада рая (аудиокнига)"></a></th>
 
 <th><a id="a107" src="jpg/metro_22.jpg" title="22. Непогребенные (аудиокнига)"></a></th>
 
