--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a167" src="jpg/metro_32.jpg" title="32. Дочь небесного духа (аудиокнига)"></a></th>
 <th><a id="a166" src="jpg/metro_20.jpg" title="20. Осада рая (аудиокнига)"></a></th>
 <th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><a id="a165" src="jpg/metro_19.jpg" title="19. Ледяной плен (аудиокнига)"></a></th>
@@ -801,6 +802,8 @@
 
 <th><a id="a108" src="jpg/metro_25.jpg" title="25. Царство крыс (аудиокнига)"></a></th>
 <th><img src="jpg/metro_26.jpg" title="26. Муос"></th>
+
+<th><a id="a167" src="jpg/metro_32.jpg" title="32. Дочь небесного духа (аудиокнига)"></a></th>
 
 <th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
