--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/01.2025.jpg"></th>
 <th><img src="jpg/payro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><a id="a168" src="jpg/metro_21.jpg" title="21. Сборник. Последнее убежище (аудиокнига)"></a></th>
 <th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
