Прочитал Когда боги смеются

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 	<th><img src="data/01.2025.jpg"></th>
 <th><img src="jpg/payro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><a id="a168" src="jpg/metro_21.jpg" title="21. Сборник. Последнее убежище (аудиокнига)"></a></th>
@@ -1313,6 +1314,7 @@
 <tr> <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8]  В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
+<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
