Прочитал Перекрёсток воронов

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 	<th><img src="data/01.2025.jpg"></th>
 <th><img src="jpg/payro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
@@ -1787,6 +1788,7 @@
 <th><img src="jpg/witcher_8.jpg" title="Владычица Озера"></th>
 <th><img src="jpg/witcher_1.jpg" title="Дорога без возврата"></th>
 <th><img src="jpg/witcher_9.jpg" title="Сезон Гроз"></th> 
+<th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 </tr></table>
 
 
