Прочитал Новые правила деловой переписки

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 <meta name="author" content="ldlolcl">
 <link rel="shortcut icon" href="icon.png"/>
 <link rel="stylesheet" media="screen" type="text/css" title="Style" href="./css/style.css">
-<!-- Горизонтальный блок --><!-- <div id="block"> </div> --> 
-<!-- Пробел --><!-- &nbsp; --> 
-<!-- Выравнивание справа --><!-- <div align="right">Текст</div> --> 
 <title>Books</title>
 </head><body><div id="body"><div id="body-con">
 <style> a {text-decoration: none;}</style>
 <base target="_blank">
-
+<!-- Горизонтальный блок --><!-- <div id="block"> </div> --> 
+<!-- Пробел --><!-- &nbsp; --> 
+<!-- Выравнивание справа --><!-- <div align="right">Текст</div> --> 
+ 
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
 <th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 	<th><img src="data/01.2025.jpg"></th>
@@ -1091,32 +1092,43 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/273457">Ильяхов Максим</a></h4></th>
 <th colspan="2"><h4>									  Инглиш Макс</h4></th>	
 <th colspan="2"><h4><a href="https://flibusta.is/a/87906">Исделл Невил</a></h4></th>	
-<th colspan="6"><h4>									  Кавадло Дэнни и Эл</h4></th>
 </tr><tr>  
+<th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="7"><h4>									   Кавадло Дэнни и Эл</h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/185005">Кавана Джон</a></h4></th>
+</tr><tr>  
 <th><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></th>
 <th><img src="jpg/denni_kavadlo_2.jpg" title="Дэнни Кавадло - Чистая сила"></th>
 <th><img src="jpg/el_i_denni_kavadlo.jpg" title="Эл и Дэнни Кавадло - Уличные тренировки. Городской воркаут"></th>
 <th><img src="jpg/el_kavadlo_1.jpg" title="Эл Кавадло - Подтянитесь! Уличный фитнес"></th>
 <th><img src="jpg/el_kavadlo_2.jpg" title="Эл Кавадло - Сила без границ"></th>
 <th><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th>
+<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/185005">Кавана Джон</a></h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/252840">Карапинар Онур</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
 </tr><tr>   
-<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th>
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
 <th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
@@ -1125,16 +1137,16 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
+<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
-<th colspan="7"><h4><a href="https://flibusta.is/a/5535">  Карнеги Дейл и др.</a></h4></th>
+<th colspan="7"><h4><a href="https://flibusta.is/a/5535"> Карнеги Дейл и др.</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/33490">Карпишин Дрю</a></h4></th>
 </tr><tr>  
-<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/karnegi_1.jpg" title="Как приобретать друзей и оказывать влияние на людей"></th>
 <th><img src="jpg/karnegi_2.jpg" title="Как вырабатывать уверенность в себе и влиять на людей, выступая публично"></th> 
 <th><img src="jpg/karnegi_3.jpg" title="Как перестать беспокоиться и начать жить"></th>
@@ -1142,76 +1154,74 @@
 <th><a id="a6" src="jpg/karnegi_5.jpg" title="Язык успеха (аудиокнига)"></th>
 <th><img src="jpg/karnegi_01.jpg" title="Мосс Дуглас и Нарбут Алекс - Дейл Карнеги. Как стать мастером общения с любым человеком, в любой ситуации"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/mass_effect_1.jpg" title="Открытие"></th>
+<th><img src="jpg/mass_effect_2.jpg" title="Восхождение"></th>
+<th><img src="jpg/mass_effect_3.jpg" title="Возмездие"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="https://flibusta.is/a/33490"> Карпишин Дрю</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/134116">Карри Мейсон</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/194157">Карсон Бен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/223543">Каст Бас</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/104829">Кауфман Джош</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/5699">  Кехо Джон</a></h4></th>
 </tr><tr>  
-<th><img src="jpg/mass_effect_1.jpg" title="Открытие"></th>
-<th><img src="jpg/mass_effect_2.jpg" title="Восхождение"></th>
-<th><img src="jpg/mass_effect_3.jpg" title="Возмездие"></th> 
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/rezhim_genia.jpg" title="Режим гения. Распорядок дня великих людей"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/misli_shiroko.jpg" title="Мысли широко"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/mba.jpg" title="Сам себе MBA. Самообразование на 100%"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/podsoznaniye_mozhet_vse.jpg" title="Подсознание может всё!"></th>
+<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/104829">Кауфман Джош</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/5699">  Кехо Джон</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/5867">  Киз Грегори</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/5866">  Киз Дэниел</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/5867">Киз Грегори</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/5866">Киз Дэниел</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/5778">Кийосаки Роберт</a></h4></th>
 </tr><tr>  
-<th><img src="jpg/mba.jpg" title="Сам себе MBA. Самообразование на 100%"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/podsoznaniye_mozhet_vse.jpg" title="Подсознание может всё!"></th>
-<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> 
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/TES.jpg" title="The Elder Scrolls. Адский город"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/billy_milligan.jpg" title="Таинственная история Билли Миллигана"></th>
 <th><img src="jpg/tsvety_dlya_eldzhernona.jpg" title="Цветы для Элджернона"></th>
 <th><img src="jpg/0.jpg"></th>
-</tr></table>
-
-
-
-<table><tr align="left"> 
-<th colspan="5"><h4><a href="https://flibusta.is/a/5778">Кийосаки Роберт</a></h4></th>
-<th colspan="2"><h4>									 Кинг Бернард</h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/5803">Кинг Стивен</a></h4></th>
-</tr><tr>  
 <th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
 <th><img src="jpg/robert_kiyosaki_2.jpg" title="Как стать богатым, не отказываясь от кредитных карточек"></th>
 <th><img src="jpg/dar_midasa.jpg" title="Трамп Дональд, Кийосаки Роберт  - Дар Мидаса"></th> 
 <th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
-<th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
-<th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/17765"> Киплинг Редьярд</a></h4></th>
+<th colspan="2"><h4>									  Кинг Бернард</h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
+</tr><tr>  
+<th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
+<th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
+<th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
+<th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
 <th colspan="5"><h4><a href="https://flibusta.is/a/192136">Кирби Мэтью</a></h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/124636">Клайн Эрнест</a></h4></th>
 </tr><tr>  	
-<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/matthew_kirby_1.jpg" title="Последние потомки"></th>
 <th><img src="jpg/matthew_kirby_2.jpg" title="Гробница хана"></th>
 <th><img src="jpg/matthew_kirby_3.jpg" title="Участь богов"></th>
