Прочитал Труп в библиотеке

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
 <th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
@@ -1322,7 +1323,8 @@
 <th><img src="jpg/payro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/payro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th> </tr>
-<tr> <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8]  В 4.50 из Паддингтона"></th>
+<tr> <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
+<th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
