--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a169" src="jpg/metro_24.jpg" title="24. Слепящая пустота (аудиокнига)"></a></th>		
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
 <th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
@@ -808,15 +809,15 @@
 <th><a id="a166" src="jpg/metro_20.jpg" title="20. Осада рая (аудиокнига)"></a></th>
 <th><a id="a168" src="jpg/metro_21.jpg" title="21. Сборник. Последнее убежище (аудиокнига)"></a></th>
 <th><a id="a107" src="jpg/metro_22.jpg" title="22. Непогребенные (аудиокнига)"></a></th>
-
+<th><a id="a169" src="jpg/metro_24.jpg" title="24. Слепящая пустота (аудиокнига)"></a></th>	
 <th><a id="a108" src="jpg/metro_25.jpg" title="25. Царство крыс (аудиокнига)"></a></th>
 <th><img src="jpg/metro_26.jpg" title="26. Муос"></th>
 
 <th><a id="a167" src="jpg/metro_32.jpg" title="32. Дочь небесного духа (аудиокнига)"></a></th>
 
-<th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
-<th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th> </tr>
-<tr> <th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
+<th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th> </tr>
+<tr> <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
+<th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
 </tr></table>
 
 
