Прочитал Сила сильных (сборник)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/sila_silnih.jpg" title="Сила сильных (сборник)"></th>
 <th><a id="a169" src="jpg/metro_24.jpg" title="24. Слепящая пустота (аудиокнига)"></a></th>		
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
@@ -1379,8 +1380,8 @@
 <th colspan="3"><h4><a href="https://flibusta.is/a/18361">Лаундес Лейл</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/18295">Лесков Н.С.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/29586">Лесли Алекс</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/18270">Лихачев Дмитрий</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/47863">Лоэр Джим</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/18270">Лихачев Дмитрий</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/7443"> Лондон Джек</a></h4></th>
 </tr><tr> 
 <th><img src="jpg/s.s.s.jpg" title="С.С.С."></th>
 <th><img src="jpg/kak_razgovarivat_s_kem_ygodno_i_o_chem_ygodno.jpg" title="Как говорить с кем угодно и о чем угодно"></th> 
@@ -1391,7 +1392,16 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/sila_silnih.jpg" title="Сила сильных (сборник)"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/47863">Лоэр Джим</a></h4></th>
+</tr><tr> 
 <th><img src="jpg/zhizn_na_polnoi.jpg" title="Лоэр Джим, Шварц Тони - Жизнь на полной мощности"></th>
+<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
